<resources>
    <string name="app_name">UTS_IF10K_10120917_RISTIAN_ADITYA</string>
    <string name="get">Get Started</string>
    <string name="titleSlider2">My Story</string>
    <string name="titleSlider1">Portfolio App</string>
    <string name="titleSlider3">Contact</string>
    <string name="bodySlider2">Aplikasi ini memberikan banyak informasi tentang saya dari mulai hobi, kebiasaan, dan keterampilan yang saya miliki dalam dunia teknologi informasi. </string>
    <string name="bodySlider1">Anda akan menemukan karya dan pengalaman yang telah saya buat selama karir saya sebagai seorang pengembang perangkat lunak.</string>
    <string name="bodySlider3">Terima kasih telah mengunjungi aplikasi ini dan jika Anda tertarik untuk berkolaborasi dalam project, bisa hubungi saya malalui halaman profile.  </string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends">Hi, Friends</string>
    <string name="title_home">Begin Portfolio Journey with Confidence !</string>
    <string name="personal_data">Personal Data</string>
    <string name="see_all">See all</string>
    <string name="ristian">Ristian Aditya</string>
    <string name="developer">Full Stack Developer</string>
    <string name="self_description">Self Description</string>
    <string name="deskripsi_body">Hii, perkenalkan nama saya Ristian Aditya. Saya adalah seorang Programmer dengan pengalaman dalam bidang web developer. Saya sangat antusias dan bersemangat dalam menghadapi tantangan baru serta mengembangkan diri dalam dunia IT.</string>
    <string name="search">Search</string>
    <string name="list_hobby">Hobby List</string>
    <string name="watch_movies">Watch Movies</string>
    <string name="ngoding">Ngoding</string>
    <string name="football">Football</string>
    <string name="video_games">Video Games</string>
    <string name="favorites_food_drink"><![CDATA[Favorites Food & Drink]]></string>
    <string name="interest_list">Interest List</string>
    <string name="music_favorite">Music Favorite</string>
    <string name="ali">Ali Gatie - It\'s You</string>
    <string name="music_favorites_list">Music Favorites List</string>
    <string name="r_b_rhythm_and_blues"><![CDATA[R&B (Rhythm and Blues)]]></string>
    <string name="desc_ali_music">Ali Gatie is a singer-songwriter renowned for her hit songs “It’s You,” “What If I Told You That I Love You,” “Moonlight,” “Running On My Mind,” “Used to You,” “If I Fall In Love,” and “Can’t Lie.” He worked with artists like Russ, Alessia Cara, and Tate McRae — amassing billions of global streams and receiving international acclaim.</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="ristian_aditya">Ristian Aditya</string>
    <string name="email">ristianaditya35@gmail.com</string>
    <string name="about">About</string>
    <string name="send_mail">Send Mail</string>
    <string name="pop">Pop</string>
    <string name="_2019">2019</string>
    <string name="play">Play</string>
    <string name="gallery_photo">Gallery Photo</string>
    <string name="open">Open</string>
    <string name="version">version aplikasi sekarang 1.0</string>
    <string name="title_version">Version App</string>
    <string name="oke">Oke</string>
    <string name="about_version">About</string>
    <string name="find_me">Find Me</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="instagram">Instagram</string>
    <string name="_email">email</string>
    <string name="maps">Maps</string>
    <string name="web_developer">Web Developer</string>
    <string name="android_developer">Android Developer</string>
    <string name="fullstack">Fullstack</string>
</resources>