<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.03"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/robotoReguler"
            android:text="@string/friends"
            android:textSize="@dimen/textSize_14sp"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="@dimen/dimen_280dp"
            android:layout_height="wrap_content"
            style="@style/robotoBold"
            android:textSize="@dimen/textSize_26sp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/title_home"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/friends" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editSearch"
            style="@style/searchForm"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textTitle"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/listHobby"
            style="@style/textTitleSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_hobby"
            android:layout_marginTop="@dimen/dimen_25dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/editSearch" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/listHobbies"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_5dp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/listHobby">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                style="@style/LinearLayoutHobbyList">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/almond"
                    style="@style/robotoReguler"
                    android:textSize="@dimen/textSize_12sp"
                    android:text="@string/video_games"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:orientation="vertical"
                style="@style/LinearLayoutHobbyList">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/almond"
                    style="@style/robotoReguler"
                    android:textSize="@dimen/textSize_12sp"
                    android:text="@string/football"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:orientation="vertical"
                style="@style/LinearLayoutHobbyList">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/almond"
                    style="@style/robotoReguler"
                    android:textSize="@dimen/textSize_12sp"
                    android:text="@string/ngoding"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:orientation="vertical"
                style="@style/LinearLayoutHobbyList">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/almond"
                    style="@style/robotoReguler"
                    android:textSize="@dimen/textSize_12sp"
                    android:text="@string/watch_movies"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/personal"
            style="@style/textTitleSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_data"
            android:layout_marginTop="@dimen/dimen_15dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/listHobbies" />

        <TextView
            android:id="@+id/seeAll"
            style="@style/robotoBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:text="@string/see_all"
            android:textColor="@color/pink"
            android:textSize="@dimen/textSize_14sp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@+id/listHobbies" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_155dp"
            android:scaleType="fitXY"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:src="@drawable/banner_profile"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/personal" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ristian"
            android:textSize="@dimen/textSize_16sp"
            style="@style/robotoBold"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dimen_105dp"
            android:layout_marginStart="@dimen/dimen_15dp"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            style="@style/robotoReguler"
            android:textSize="@dimen/textSize_12sp"
            android:textColor="@color/grey50"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/interest"
            style="@style/textTitleSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest_list"
            android:layout_marginTop="@dimen/dimen_15dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageBarcelona"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:src="@drawable/barcelona"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/interest" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageJs"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/js"
            app:layout_constraintStart_toEndOf="@+id/imageBarcelona"
            app:layout_constraintTop_toBottomOf="@+id/interest" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imagePhp"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:src="@drawable/php"
            app:layout_constraintStart_toEndOf="@+id/imageJs"
            app:layout_constraintTop_toBottomOf="@+id/interest" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageFlutter"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:src="@drawable/flutter"
            app:layout_constraintStart_toEndOf="@+id/imagePhp"
            app:layout_constraintTop_toBottomOf="@+id/interest" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageKotlin"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:scaleType="fitXY"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:src="@drawable/kotlin"
            app:layout_constraintStart_toEndOf="@+id/imageFlutter"
            app:layout_constraintTop_toBottomOf="@+id/interest" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/descBody"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginBottom="@dimen/dimen_30dp"
            android:padding="@dimen/dimen_15dp"
            android:background="@drawable/deskripsi_background"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/imageBarcelona">

            <TextView
                android:id="@+id/textView3"
                style="@style/robotoBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/self_description"
                android:textColor="@color/grey90"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/deskripsi_stroke"
                android:padding="@dimen/dimen_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/dimen_25dp"
                    android:layout_height="@dimen/dimen_25dp"
                    android:src="@drawable/info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/robotoReguler"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:text="@string/deskripsi_body"
                    android:textColor="@color/grey90"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/titleFavorites"
            style="@style/textTitleSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites_food_drink"
            android:layout_marginTop="@dimen/dimen_15dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/descBody" />

        <GridView
            android:id="@+id/gridFavorite"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:horizontalSpacing="@dimen/dimen_10dp"
            android:numColumns="3"
            android:verticalSpacing="@dimen/dimen_10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/titleFavorites" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>