<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/deskripsi_background"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:paddingBottom="@dimen/dimen_20dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dimen_350dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textTitleWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_25dp"
            android:text="@string/title_version"
            style="@style/robotoBold"
            android:textSize="@dimen/textSize_17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textBodyWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:text="@string/version"
            android:textSize="@dimen/textSize_14sp"
            style="@style/robotoReguler"
            app:layout_constraintStart_toStartOf="@+id/textTitleWarning"
            app:layout_constraintTop_toBottomOf="@+id/textTitleWarning" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOkeKembali"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="@dimen/dimen_50dp"
            android:text="@string/oke"
            android:textAllCaps="false"
            android:textSize="@dimen/textSize_16sp"
            app:cornerRadius="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:backgroundTint="@color/pink"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textBodyWarning" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>