<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94"/>

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/deskripsi_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_230dp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/play_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_play_circle_outline_24" />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_20dp"
                android:paddingStart="@dimen/dimen_25dp"
                android:paddingEnd="@dimen/dimen_25dp"
                android:paddingBottom="@dimen/dimen_20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/robotoBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:text="@string/ali"
                    android:textSize="@dimen/textSize_16sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/listHobbies"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView4">

                    <TextView
                        style="@style/robotoReguler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pop"
                        android:textColor="@color/darkGreen"
                        android:textSize="@dimen/textSize_12sp" />

                    <TextView
                        style="@style/robotoReguler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/r_b_rhythm_and_blues"
                        android:textColor="@color/darkGreen"
                        android:textSize="@dimen/textSize_12sp" />

                    <TextView
                        style="@style/robotoReguler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_5dp"
                        android:text="@string/_2019"
                        android:textColor="@color/darkGreen"
                        android:textSize="@dimen/textSize_12sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/descBody"
                    style="@style/robotoReguler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_15dp"
                    android:lineSpacingExtra="@dimen/dimen_3dp"
                    android:text="@string/desc_ali_music"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/listHobbies" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/dimen_35dp"
                    android:layout_height="@dimen/dimen_35dp"
                    android:src="@drawable/foto_ali"
                    app:layout_constraintBottom_toBottomOf="@+id/listHobbies"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/titleFavorites"
            style="@style/textTitleSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_favorites_list"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/titleFavorites"
            tools:itemCount="5"
            tools:listitem="@layout/card_list_music" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>